--- a/Lesson6/index.html
+++ b/Lesson6/index.html
@@ -36,7 +36,7 @@
     alert(current); // 1
 
     <h2>Задание 4</h2>
-    • Есть следующий код:
+    <p> Есть следующий код:</p>
     var country = {
     name: 'Ukraine',
     language: 'ukrainian',
@@ -52,14 +52,15 @@
     }
 
 
-    Допишите код, чтобы в консоли браузера появились строки, которые написаны в комментариях:
+    <p>Допишите код, чтобы в консоли браузера появились строки, которые написаны в комментариях:</p>
 
-    format.call(/* Ваш код */); // Ukraine
-    format.apply(/* Ваш код */); // [Ukraine]
-    format.call(/* Ваш код */); // Kyiv
-    format.apply(/* Ваш код */); // Kyiv
-    format.apply(/* Ваш код */); // undefined
+    <p>format.call(/* Ваш код */); // Ukraine</p>
+    <p>format.apply(/* Ваш код */); // [Ukraine]</p>
+    <p> format.call(/* Ваш код */); // Kyiv</p>
+    <p>format.apply(/* Ваш код */); // Kyiv</p>
+    <p> format.apply(/* Ваш код */); // undefined</p>
 
+    <h2>Задание 5</h2>
     • Создайте объект user с полем name. Создайте функцию format с параметрами start и end:
 
     function format(start, end) {
