--- a/Lesson6/index.html
+++ b/Lesson6/index.html
@@ -69,7 +69,7 @@
 
 
     Реализуйте решение текущего задания используя метод bind().
-
+    <h2>Задание 6</h2>
     • Напишите функцию concat, которая соединяет две строки, разделенные каким-то символом: разделитель и строки
     передаются
     в параметрах функции. Используя карринг, создайте новую функцию hello, которая которая выводит приветствие тому, кто
@@ -80,11 +80,12 @@
 
     Level Up
     Рекурсия
+    <h2>Задание 7</h2>
     • Напишите функцию, которая возвращает куб переданного числа, аналог Math.pow(x, 3) – a) используя цикл b) используя
     рекурсию:
 
     console.log( cube(2) ); // 8
-
+    <h2>Задание 8</h2>
     • Придумайте алгоритм расчета суммы всех фактических параметров функции с использованием только рекурсии:
 
     console.log( sum(1, 2, 3, 4, 5) ); // 15
