Interaction with the server

--- a/Lesson15/index.html
+++ b/Lesson15/index.html
@@ -7,19 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css">
-
     <title>Lesson15</title>
 </head>
 
 <body>
-    <h1>Interaction with the server - Взаимодействие с сервером</h1>
+    <div class="theme">
+        <h1 class="heading">"Interaction with the server - Взаимодействие с сервером"</h1>
+    </div>
+    <div class="users">
+        <div cl>
+            <h3></h3>
+            <h4></h4>
+            <p></p>
+        </div>
+    </div>
 
 
-
-    <script src="js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
