Interaction with the server

--- a/Lesson15/index.html
+++ b/Lesson15/index.html
@@ -14,15 +14,10 @@
 
 <body>
     <div class="theme">
-        <h1 class="heading">"Interaction with the server - Взаимодействие с сервером"</h1>
+        <h1 class="heading">"Interaction with the server | Взаимодействие с сервером"</h1>
     </div>
-    <div class="users">
-        <div cl>
-            <h3></h3>
-            <h4></h4>
-            <p></p>
-        </div>
-    </div>
+
+    <div id="users"> </div>
 
 
     <script src="./js/main.js"></script>
