--- a/Lesson22/index.html
+++ b/Lesson22/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles.css" />
-  <title>Aim Training | Проект 5</title>
+  <link rel="stylesheet" href="styles.css">
+  <title> JS task </title>
 </head>
 
 <body>
+
   <div class="screen">
-    <h1>Aim Training</h1>
+    <h1>The Game</h1>
     <a href="#" id="start" class="start">Начать игру</a>
   </div>
 
@@ -32,20 +31,22 @@
           30 сек
         </button>
       </li>
-      <li>
-        <button class="time-btn" data-time="40">
-          40 сек
-        </button>
-      </li>
+
     </ul>
   </div>
 
-  <div class="screen">
+  <div class="screen" id="canvas">
     <h3>Осталось <span id="time">00:00</span></h3>
     <div class="board" id="board"></div>
   </div>
 
-  <script src="./app.js"></script>
+
+
+
+
+
+
+  <script type="text/javascript" src="main.js"></script>
 </body>
 
 </html>
