playing without using canvas

--- a/game/gameNotConvas/index.html
+++ b/game/gameNotConvas/index.html
@@ -35,7 +35,7 @@
     </ul>
   </div>
 
-  <div class="screen" id="canvas">
+  <div class="screen">
     <h3>Осталось <span id="time">00:00</span></h3>
     <div class="board" id="board"></div>
   </div>
@@ -46,7 +46,9 @@
 
 
 
+
   <script type="text/javascript" src="main.js"></script>
+
 </body>
 
 </html>
