--- a/game/gameConvas/index.html
+++ b/game/gameConvas/index.html
@@ -15,7 +15,7 @@
     <button id="stop"> Stop </button>
     <span> Score: <span id="score"> 0 </span> </span>
   </div>
-  <canvas id="canvas"></canvas>
+  <canvas width="640" height="480" id="canvas"></canvas>
   <script type="text/javascript" src="main.js"></script>
 
 </body>
