--- a/game/gameCanvas/index.html
+++ b/game/gameCanvas/index.html
@@ -13,7 +13,7 @@
   <div>
     <button id="start"> Start </button>
     <button id="stop"> Stop </button>
-    <span> Score: <span id="score"> 0 </span> </span>
+    <span class="score"> Score: <span id="score"> 0 </span> </span>
   </div>
   <canvas width="640" height="480" id="canvas"></canvas>
   <script type="text/javascript" src="main.js"></script>
